[package]
name = "webptimize"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
console = "0.15.8"
env_logger = "0.11.5"
image = "0.25.2"
indicatif = "0.17.8"
log = "0.4.22"
rayon = "1.10.0"
webp = "0.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.12.0"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true
