[package]
name = "webptimize"
version = "0.1.0"
edition = "2021"
description = "Convert images in bulk to WebP through a CLI"
readme = "README.md"
repository = "https://github.com/probablynotval/webptimizer"
license = "GPL-3.0"


[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
console = "0.15.8"
env_logger = "0.11.5"
image = "0.25.2"
indicatif = "0.17.8"
log = "0.4.22"
rayon = "1.10.0"
webp = "0.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.12.0"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
